--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,11 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-
 # Logs
 logs/
+
+# saved model
+saved_model/
+
+#saved checkpoints
+training_saves/
